// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Breadcrumbs /> should render Breadcrumbs 1`] = `
<div>
  <div
    class="mfui-breadcrumbs mfui-breadcrumbs_color_default"
  >
    <div
      class="mfui-breadcrumbs__item"
    >
      <div
        class="mfui-breadcrumbs-item"
      >
        <a
          class="mfui-text-link mfui-text-link_underline-visibility_hover mfui-text-link_underline-style_solid mfui-text-link_color_default"
          href="#"
        >
          <span>
            МегаФон
          </span>
        </a>
      </div>
    </div>
    <div
      class="mfui-breadcrumbs__item"
    >
      <div
        class="mfui-breadcrumbs-item"
      >
        <a
          class="mfui-text-link mfui-text-link_underline-visibility_hover mfui-text-link_underline-style_solid mfui-text-link_color_default"
          href="#"
        >
          <span>
            Мобильная связь
          </span>
        </a>
      </div>
    </div>
    <div
      class="mfui-breadcrumbs__item"
    >
      <div
        class="mfui-breadcrumbs-item mfui-breadcrumbs-item_color_default"
      >
        <span>
          Тарифы
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Breadcrumbs /> should render Breadcrumbs with custom items 1`] = `
<div>
  <div
    class="mfui-breadcrumbs mfui-breadcrumbs_color_default"
  >
    <div
      class="mfui-breadcrumbs__item"
    >
      <a
        href="test1.com"
      >
        Item 1
      </a>
    </div>
    <div
      class="mfui-breadcrumbs__item"
    >
      <a
        href="test2.com"
      >
        Item 2
      </a>
    </div>
    <div
      class="mfui-breadcrumbs__item"
    >
      <span>
        Item 3
      </span>
    </div>
  </div>
</div>
`;
